--- a/WinAPI/WinAPI/WinAPI.vcxproj.filters
+++ b/WinAPI/WinAPI/WinAPI.vcxproj.filters
@@ -36,5 +36,13 @@
     <Image Include="Network.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Arrow2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="lightning-handwriting.cur">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
